[gd_scene load_steps=30 format=3 uid="uid://c2bq58ebr8dvl"]

[ext_resource type="Script" uid="uid://cywt230gsnby" path="res://scenes/game_object/enemies/chest_enemy/chest_enemy.gd" id="1_u32xm"]
[ext_resource type="PackedScene" uid="uid://br47oe6cdcp4h" path="res://scenes/component/random_stream_player_2d_component.tscn" id="2_kwvgu"]
[ext_resource type="Texture2D" uid="uid://brt48x670qlx2" path="res://scenes/game_object/enemies/chest_enemy/chest1.png" id="2_mxrr0"]
[ext_resource type="AudioStream" uid="uid://dv2j0eoxxdl5l" path="res://assets/audio/sfx/footstep_carpet_000.ogg" id="3_4ks44"]
[ext_resource type="Texture2D" uid="uid://bdwo6xg8w2ed7" path="res://scenes/game_object/enemies/chest_enemy/chest2.png" id="3_mtgqr"]
[ext_resource type="AudioStream" uid="uid://b7jevwof7y23c" path="res://assets/audio/sfx/footstep_carpet_001.ogg" id="4_6cjpc"]
[ext_resource type="Texture2D" uid="uid://d3o3s17kiw4v3" path="res://scenes/game_object/enemies/chest_enemy/chest3.png" id="4_tlb22"]
[ext_resource type="AudioStream" uid="uid://c2tvbvycrcy8v" path="res://assets/audio/sfx/footstep_carpet_002.ogg" id="5_2arb4"]
[ext_resource type="Texture2D" uid="uid://ntqtoqj6r6dy" path="res://scenes/game_object/enemies/chest_enemy/chest4.png" id="5_w3h40"]
[ext_resource type="AudioStream" uid="uid://cfa3vwlwibsog" path="res://assets/audio/sfx/footstep_carpet_003.ogg" id="6_b1vc6"]
[ext_resource type="AudioStream" uid="uid://cf3t6u6466igk" path="res://assets/audio/sfx/footstep_carpet_004.ogg" id="7_x8u0j"]
[ext_resource type="PackedScene" uid="uid://bqynfy3wngpy7" path="res://scenes/component/vial_drop_component.tscn" id="8_nrl1u"]
[ext_resource type="PackedScene" uid="uid://cl21hasx1ekjd" path="res://scenes/component/health_component.tscn" id="9_d8ovj"]
[ext_resource type="PackedScene" uid="uid://b15860rxkv1a1" path="res://scenes/component/velocity_component.tscn" id="10_hxrrl"]
[ext_resource type="PackedScene" uid="uid://dwhwp00bq1je6" path="res://scenes/component/hitflash_component.tscn" id="11_0unaj"]
[ext_resource type="Shader" uid="uid://c2iot2odwiyy5" path="res://scenes/component/hitflash_component.gdshader" id="12_avcfx"]
[ext_resource type="PackedScene" uid="uid://cfqv7qt4x3y3i" path="res://scenes/component/death_component.tscn" id="13_i6el8"]
[ext_resource type="PackedScene" uid="uid://bwti2l1ir5u6k" path="res://scenes/game_object/experience_vial/big_red_vial.tscn" id="13_m06ij"]
[ext_resource type="PackedScene" uid="uid://sl3i0hvqi3av" path="res://scenes/component/hurtbox_component.tscn" id="14_8uexg"]
[ext_resource type="PackedScene" uid="uid://cn80dr6eyu445" path="res://scenes/component/death_sfx_player.tscn" id="19_4g65k"]
[ext_resource type="AudioStream" uid="uid://cj4x55cq1sc8s" path="res://scenes/game_object/enemies/chest_enemy/mimic1.mp3" id="20_n78jx"]
[ext_resource type="PackedScene" uid="uid://ds1jpmcwff24x" path="res://scenes/component/enemy_shadow.tscn" id="22_uv2ew"]

[sub_resource type="Animation" id="Animation_ihajb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_mxrr0")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_yr6r7"]
resource_name = "open"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_mxrr0"), ExtResource("3_mtgqr"), ExtResource("4_tlb22"), ExtResource("5_w3h40")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.174533, -0.174533]
}

[sub_resource type="Animation" id="Animation_fjdpl"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.261799, -0.174533, 0.174533, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rqgq1"]
_data = {
&"RESET": SubResource("Animation_ihajb"),
&"open": SubResource("Animation_yr6r7"),
&"walk": SubResource("Animation_fjdpl")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_11yjx"]
resource_local_to_scene = true
shader = ExtResource("12_avcfx")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dltyd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6yu18"]
radius = 5.0

[node name="ChestEnemy" type="CharacterBody2D" groups=["enemy", "entities_layer"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_u32xm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rqgq1")
}
autoplay = "walk"

[node name="HitRandomAudioPlayer2DComponent" parent="." instance=ExtResource("2_kwvgu")]
max_distance = 300.0
streams = Array[AudioStream]([ExtResource("3_4ks44"), ExtResource("4_6cjpc"), ExtResource("5_2arb4"), ExtResource("6_b1vc6"), ExtResource("7_x8u0j")])

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 60.0
autostart = true

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("8_nrl1u")]
drop_percent = 1.0
vial_scene = ExtResource("13_m06ij")
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("9_d8ovj")]
max_health = 40.0

[node name="VelocityComponent" parent="." instance=ExtResource("10_hxrrl")]
max_speed = 50
acceleration = 0.5

[node name="HitflashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("11_0unaj")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_11yjx")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("13_i6el8")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="DeathSFXPlayer" parent="DeathComponent" instance=ExtResource("19_4g65k")]
unique_name_in_owner = true
stream = ExtResource("20_n78jx")
volume_db = -5.0

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("14_8uexg")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_dltyd")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("2_mxrr0")
offset = Vector2(0, -6)

[node name="EnemyShadow" parent="Visuals/Sprite2D" instance=ExtResource("22_uv2ew")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_6yu18")
